--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,4 +1,4 @@
-name: "CI: foxy, galactic, rolling"
+name: "CI: humble, jazzy, rolling"
 
 on:
   push:
@@ -15,14 +15,19 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ ubuntu-20.04 ]
-        ros_distribution: [ foxy, galactic, rolling ]
+        include:
+          - ros_distribution: "humble"
+            os: "ubuntu-22.04"
+          - ros_distribution: "jazzy"
+            os: "ubuntu-24.04"
+          - ros_distribution: "rolling"
+            os: "ubuntu-24.04"
     steps:
-    - uses: actions/checkout@v2.3.4
-    - uses: ros-tooling/setup-ros@v0.2
+    - uses: actions/checkout@v3
+    - uses: ros-tooling/setup-ros@v0.7
       with:
         required-ros-distributions: ${{ matrix.ros_distribution }}
-    - uses : ros-tooling/action-ros-ci@v0.2
+    - uses : ros-tooling/action-ros-ci@v0.3
       with:
         package-name: "launch_system_modes system_modes system_modes_examples system_modes_msgs test_launch_system_modes "
         target-ros2-distro: ${{ matrix.ros_distribution }}
@@ -36,6 +41,6 @@ jobs:
             }
           }
         colcon-mixin-repository: https://raw.githubusercontent.com/colcon/colcon-mixin-repository/master/index.yaml
-    - uses: codecov/codecov-action@v1.5.0
+    - uses: codecov/codecov-action@v3
       with:
         file: ros_ws/lcov/total_coverage.info
